--- a/C/Colas/Colas.project
+++ b/C/Colas/Colas.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="EJEMPLO3" Version="11000" InternalType="Console">
+<CodeLite_Project Name="Colas" Version="11000" InternalType="Console">
   <Description/>
   <Dependencies/>
   <Settings Type="Executable">
@@ -93,6 +93,14 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
-    <File Name="main.cpp" ExcludeProjConfig="Debug;"/>
+    <VirtualDirectory Name="Source">
+      <File Name="NodoCola.cpp"/>
+      <File Name="Cola.cpp"/>
+    </VirtualDirectory>
+    <VirtualDirectory Name="Header">
+      <File Name="NodoCola.hpp"/>
+      <File Name="Cola.hpp"/>
+    </VirtualDirectory>
+    <File Name="main.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
