--- a/C/EJEMPLO1/EJEMPLO1.project
+++ b/C/EJEMPLO1/EJEMPLO1.project
@@ -93,6 +93,6 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
-    <File Name="main.cpp"/>
+    <File Name="main.cpp" ExcludeProjConfig="Debug;"/>
   </VirtualDirectory>
 </CodeLite_Project>
