--- a/C/Makefile
+++ b/C/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ C - Debug ]----------"
-	@cd "C" && "$(MAKE)" -f  "C.mk"
+	@echo "----------Building project:[ Colas - Debug ]----------"
+	@cd "Colas" && "$(MAKE)" -f  "Colas.mk"
 clean:
-	@echo "----------Cleaning project:[ C - Debug ]----------"
-	@cd "C" && "$(MAKE)" -f  "C.mk" clean
+	@echo "----------Cleaning project:[ Colas - Debug ]----------"
+	@cd "Colas" && "$(MAKE)" -f  "Colas.mk" clean
